2003-06-24
	added testscript test.t