@@ -5,7 +5,7 @@ BEGIN { plan tests => 3 }
 
 use RPM::Info; ok(1); 
 
-my $rpm = new Info(); ok(2); 
+my $rpm = new RPM::Info(); ok(2); 
 
 my $ver = $rpm->getRpmVer(); ok(3);
 
